// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction matches snapshot for incoming transaction 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#E5E7EB",
      "borderRadius": 16,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": 12,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E6F3F4",
          "borderRadius": 12,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <Text>
        ⬇️
      </Text>
    </View>
    <View>
      <Text
        style={
          {
            "color": "#1A1C1E",
            "fontSize": 14,
            "fontWeight": "700",
          }
        }
      >
        Salary
      </Text>
      <Text
        style={
          {
            "color": "#6C727A",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        Jan, 15 2024
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "700",
        },
        {
          "color": "#16A34A",
        },
      ]
    }
  >
    +
    RM
    50.75
  </Text>
</View>
`;

exports[`Transaction matches snapshot for outgoing transaction 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#E5E7EB",
      "borderRadius": 16,
      "borderWidth": 1,
      "flexDirection": "row",
      "justifyContent": "space-between",
      "marginBottom": 12,
      "padding": 16,
    }
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
        "gap": 12,
      }
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#E6F3F4",
          "borderRadius": 12,
          "height": 48,
          "justifyContent": "center",
          "width": 48,
        }
      }
    >
      <Text>
        ⬆️
      </Text>
    </View>
    <View>
      <Text
        style={
          {
            "color": "#1A1C1E",
            "fontSize": 14,
            "fontWeight": "700",
          }
        }
      >
        Coffee Shop
      </Text>
      <Text
        style={
          {
            "color": "#6C727A",
            "fontSize": 12,
            "marginTop": 2,
          }
        }
      >
        Jan, 15 2024
      </Text>
    </View>
  </View>
  <Text
    style={
      [
        {
          "fontSize": 16,
          "fontWeight": "700",
        },
        {
          "color": "#DC2626",
        },
      ]
    }
  >
    -
    RM
    50.75
  </Text>
</View>
`;
